Fix ISA alignment

--- a/projects/plugins/boost/app/assets/src/js/features/module/module.module.scss
+++ b/projects/plugins/boost/app/assets/src/js/features/module/module.module.scss
@@ -28,4 +28,5 @@
 	// Manually move the switch to align it better
 	transform: translateY(8px);
 	margin-right: 2em;
+	min-width: 36px;
 }
